@@ -9,3 +9,5 @@ Planned features:
 - a shortcut button, so you don't have to run the command every time
 - ~~caching the item in a script inventory and merely giving a copy when triggered~~
 - supporting quality that is out of order, contact me if you know of a mod that breaks this one
+
+- cube/dice shape derived from the outlines of https://www.pngegg.com/en/png-xrouj
