@@ -19,6 +19,6 @@
         "? newsletter-for-mods-made-by-quezler",
 
         "base >= 2.0.13",
-        "quality"
+        "? quality"
     ]
 }
