@@ -1,2 +1,8 @@
 [item-name]
 quality-upgrade-planner=Quality upgrade planner
+
+[item-description]
+quality-upgrade-planner=Updates the quality of buildings, recipes, filters, and more.
+
+[shortcut]
+make-quality-upgrade-planner=Quality upgrade planner
