@@ -3,6 +3,7 @@ Version: 2.0.0
 Date: ????
   Info:
     - Begin selection tool conversion
+    - Add shortcut button (resolves #20)
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.8
 Date: 2024. 12. 12
